Fixed horizontal scrolling bug in history

--- a/css/history.css
+++ b/css/history.css
@@ -89,7 +89,7 @@ main h1{
     padding: 20vh 5%;
     justify-content: start;
     align-items: center;
-    background-size: cover;
+    /* background-size: cover; */
     scroll-snap-align: center;
 }
 
@@ -136,20 +136,23 @@ main h1{
 
 @media only screen and (min-width: 1000px) {
     .timeline{
+        height: 60vh;
+        overflow-y: hidden;
+        scroll-snap-type: y none;
         overflow-x: scroll;
         scroll-snap-type: x mandatory;
     }
 
     .timeline article{
-        height: 80vh;
-        width: 100%;
+        height: 100%;
+        width: fit-content;
         flex-direction: row;
     }
 
     .timeline article section{
         flex-direction: column-reverse;
         justify-content: center;
-        padding: 5% 20vh;
+        padding: 0% 20vw;
     }
 
     .timeline article section .text{
